--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
-    "start": "http-server src/"
+    "dev": "parcel src/index.html"
   },
   "dependencies": {
     "d3": "^7.2.1",
@@ -18,6 +18,6 @@
   "devDependencies": {
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
-    "http-server": "^14.0.0"
+    "parcel": "^2.1.1"
   }
 }
