--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "consola": "^2.15.3",
     "d3": "^7.2.1",
     "jspsych": "^6.0.0",
+    "jspsych-attention-check": "^1.4.2",
     "jspsych-wrapper": "file:packages/jspsych-wrapper-v0.1.1.tgz"
   },
   "devDependencies": {
