--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
