--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "d3": "^7.2.1",
     "jspsych": "^6.0.0",
     "jspsych-attention-check": "^1.4.2",
-    "jspsych-wrapper": "file:packages/jspsych-wrapper-v0.2.3.tgz"
+    "jspsych-wrapper": "file:packages/jspsych-wrapper-v0.2.5.tgz"
   },
   "devDependencies": {
     "babel-loader": "^8.2.3",
@@ -28,6 +28,8 @@
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
