--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "webpack && gulp images",
     "dev": "webpack serve",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "prettier --write ."
   },
   "dependencies": {
     "consola": "^2.15.3",
@@ -26,9 +27,11 @@
     "csv-loader": "^3.0.3",
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.1",
