--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "d3": "^7.2.1",
     "jspsych": "^6.0.0",
     "jspsych-attention-check": "^1.4.2",
-    "jspsych-wrapper": "file:packages/jspsych-wrapper-v0.2.7.tgz"
+    "neurocog": "^0.3.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "csv-loader": "^3.0.3",
