--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "webpack && gulp images",
     "start": "webpack serve",
+    "test": "jest",
     "clean": "rm -rf dist",
     "lint": "prettier --write ."
   },
@@ -32,6 +33,7 @@
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.4.3",
     "prettier": "2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
